# mgcpp

./: .clang-format  .codedocs  .gitignore  .gitmodules  .travis.yml  Aptfile  CMakeLists.txt  LICENCE  NOTICE  Procfile  README.md  README.org  appveyor.yml  format.sh  procfile  requirements.txt  run_format.py
.travis/: cmake_install.sh  cuda_install.sh  cuda_install_osx.sh  cuda_install_ubuntu.sh  gtest_install.sh  install_cuda.sh
cmake/: FindMAGMA.cmake  feature_test.cmake
cmake/feature_test/: CMakeLists.txt  cuda_gencode  cuda_gencode_test.cpp
docs/: Doxyfile.in  TODO.md  customdoxygen.css  header.html
examples/: CMakeLists.txt
examples/LSTM/: CMakeLists.txt  main.cpp  mgcpp_example_LSTM
examples/MLP/: CMakeLists.txt  MLP.cpp  drawwidget.cpp  drawwidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  model_h_moved.txt
include/mgcpp/: cpu_matrix.hpp  gpu_matrix.hpp  gpu_vector.hpp  header.hpp  mgcpp.hpp
include/mgcpp/adapters/: adapter_base.hpp  adapters.hpp  blaze.hpp
include/mgcpp/allocators/: allocator.hpp  allocator.tpp  cudamalloc_resource.hpp  default.hpp  default.tpp  device_memory_resource.hpp  memory_resource.hpp  new_delete_resource.hpp
include/mgcpp/context/: device_manager.hpp  forward.hpp  global_context.hpp  thread_context.hpp  thread_context.tpp  thread_guard.hpp  thread_guard.ipp
include/mgcpp/cpu/: cpu_matrix.hpp  forward.hpp  fwd.hpp  matrix.hpp  matrix.tpp  vector.hpp  vector.tpp
include/mgcpp/cpu_matrix/: dynamic_matrix.hpp  static_matrix.hpp
include/mgcpp/cublas/: blas_lv1.hpp  blas_lv1.tpp  blas_lv3.hpp  blas_lv3.tpp  blaslike_ext.hpp  blaslike_ext.tpp  cublas_fft.hpp  cublas_fft.tpp  cublas_helpers.hpp  cublas_helpers.tpp  cufft_fft.hpp  cufft_fft.tpp
include/mgcpp/cuda/: cuda_exceptions.hpp  cuda_template_stdlib.hpp  cuda_template_stdlib.tpp  device.hpp  device.ipp  device.tpp  exception.hpp  exceptions.hpp  initialize.hpp  memory.hpp  memory.tpp  memory_management.hpp  stdlib.hpp  stdlib.tpp
include/mgcpp/cuda_libs/: cublas.hpp  cublas.tpp  cufft_fft.hpp  cufft_fft.tpp
include/mgcpp/device/: forward.hpp  matrix.hpp  matrix.tpp  vector.hpp  vector.tpp
include/mgcpp/expressions/: base_expr.hpp  binary_op.hpp  binary_op.tpp  constant_expr.hpp  dmat_dmat_add.hpp  dmat_dmat_add.tpp  dmat_dmat_mult.hpp  dmat_dmat_mult.tpp  dmat_dmat_sub.hpp  dmat_dmat_sub.tpp  dmat_dvec_mult.hpp  dmat_dvec_mult.tpp  dmat_expr.hpp  dmat_expr.tpp  dmat_reduce_expr.hpp  dmat_reduce_expr.tpp  dmat_ref_expr.hpp  dmat_ref_expr.tpp  dmat_trans_expr.hpp  dmat_trans_expr.tpp  dvec_dvec_add.hpp  dvec_dvec_add.tpp  dvec_dvec_outer.hpp  dvec_elemwise.hpp  dvec_elemwise.tpp  dvec_expr.hpp  dvec_expr.tpp  dvec_map.hpp  dvec_map.tpp  dvec_reduce_expr.hpp  dvec_reduce_expr.tpp  dvec_ref_expr.hpp  dvec_ref_expr.tpp  eval_cache.hpp  eval_context.hpp  eval_context.tpp  evaluator.hpp  evaluator.tpp  expr_base.hpp  expr_eval.hpp  (+32 more)
include/mgcpp/global/: allignment.hpp  complex.hpp  half_precision.hpp  init.hpp  shape.hpp  shape.tpp  storage_order.hpp  tuple_utils.hpp  type_erased.hpp  type_erased.tpp
include/mgcpp/gpu/: forward.hpp  fwd.hpp  gpu_matrix.hpp  gpu_ptr.hpp  gpu_ptr.ipp  matrix.hpp  matrix.tpp  vector.hpp  vector.tpp
include/mgcpp/gpu_matrix/: gpu_matrix.hpp
include/mgcpp/host/: forward.hpp  matrix.hpp  matrix.tpp  vector.hpp  vector.tpp
include/mgcpp/internal_cuda/: cuda_stdlib.hpp
include/mgcpp/kernels/: fill.hpp  fill.tpp  init_vector.hpp  kernel_status.hpp  mgblas_error_code.hpp  mgblas_fft.hpp  mgblas_fft.tpp  mgblas_helpers.hpp  mgblas_helpers.tpp  mgblas_lv1.hpp  mgblas_lv1.tpp
include/mgcpp/matrix/: column_view.hpp  column_view.tpp  dense_matrix.hpp  device_matrix.hpp  device_matrix.tpp  forward.hpp  matrix_base.hpp  matrix_base.tpp  row_view.hpp  row_view.tpp
include/mgcpp/operations/: abs.hpp  abs.tpp  add.hpp  add.tpp  elemwise.hpp  elemwise.tpp  fft.hpp  fft.tpp  gemm.hpp  gemm.tpp  hdmd.hpp  hdmd.tpp  map.hpp  map.tpp  mean.hpp  mean.tpp  mult.hpp  mult.tpp  outer.hpp  outer.tpp  pad.hpp  pad.tpp  sub.hpp  sub.tpp  sum.hpp  sum.tpp  trans.hpp  trans.tpp
include/mgcpp/strict/: multiplication.hpp  multiplication.tpp
include/mgcpp/system/: assert.hpp  concept.hpp  cublas_error.hpp  cuda_error.hpp  cufft_error.hpp  error_code.hpp  error_message_format.hpp  exception.hpp  mgblas_error.hpp  mgcpp_kernel_error.hpp  outcome.hpp  (+3 more)
src/: cublas_error.cpp  cuda_error.cpp  cuda_memory_management.cpp  cuda_status_wrapper.cpp  cuda_stdlib.cpp  cuda_stdlib_wrapper.cpp  cudamalloc_resource.cpp  cufft_error.cpp  device_manager.cpp  device_memory_resource.cpp  error_code.cpp  eval_cache.cpp  eval_context.cpp  expression.cpp  generic_op.cpp  global_context.cpp  init.cpp  initialize.c  initialize.cu  leak_checker.cpp  main.cpp  mgblas_error.cpp  mgcpp_error_code.cpp  mgcpp_kernel_error.cpp  new_delete_resource.cpp  thread_context.cpp  tools_leak_checker.cpp  type_cast.cpp
src/cuda/: device.cpp  memory.cpp
src/cuda_libs/: cublas.cpp  cufft_fft.cpp
src/kernels/: absolute.cu  convert.cu  convolution.cu  elemwise.cu  fft.cu  fill.cu  hadamard.cu  map.cu  reduce.cu  vec_hadamard.cu
test/: CMakeLists.txt  blaslv1_expression_test.cpp  blaslv1_operation_test.cpp  blaslv2_expression_test.cpp  blaslv3_expression_test.cpp  blaslv3_operation_test.cpp  complex_test.cpp  cpu_matrix.cpp  cpu_matrix.hpp  cpu_matrix_test.cpp  cublas_helpers_test.cpp  cuda_error_test.cpp  cuda_exception_test.cpp  cuda_memory_test.cpp  cuda_status_wrapper_test.cpp  cuda_stdlib_test.cpp  cuda_stdlib_wrapper_test.cpp  cuda_tmp_stdlib_test.cpp  device_allocators_test.cpp  device_matrix_test.cpp  device_vector_test.cpp  expression_mult_test.cpp  expression_test.cpp  fft_test.cpp  global_context_test.cpp  gpu_matrix_test.cpp  gpu_vector_test.cpp  gradient_test.cpp  main.cpp  matrix_view_test.cpp  memory_leak_detector.cpp  memory_leak_detector.hpp  mgblas_helpers_test.cpp  mgcpp_test.hpp  operation_mult_test.cpp  operation_test.cpp  test_policy.cpp  test_policy.hpp  test_utils.cpp  test_utils.hpp  (+3 more)
test/matrix/: device_matrix_test.cpp
test/operations/: fft_test.cpp
(+37 files in other folders)
